--- a/notebook/modelling.ipynb
+++ b/notebook/modelling.ipynb
@@ -2,15 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "import numpy as np\n",
-    "import pandas as pd\n",
     "import warnings\n",
     "from scipy.stats import spearmanr # since the data is not normal\n",
     "from sklearn.linear_model import LinearRegression, Lasso, Ridge\n",
@@ -25,12 +23,13 @@
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn.neural_network import MLPRegressor\n",
-    "from xgboost import XGBRegressor"
+    "from xgboost import XGBRegressor\n",
+    "from catboost import CatBoostRegressor\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -228,7 +227,7 @@
        "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -240,31 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['battery_power', 'blue', 'clock_speed', 'dual_sim', 'fc', 'four_g',\n",
-       "       'int_memory', 'm_dep', 'mobile_wt', 'n_cores', 'pc', 'px_height',\n",
-       "       'px_width', 'ram', 'sc_h', 'sc_w', 'talk_time', 'three_g',\n",
-       "       'touch_screen', 'wifi', 'price_range'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "train.columns"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -308,14 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -611,7 +579,7 @@
        "max       3.000000  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -625,7 +593,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -677,7 +645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -710,7 +678,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -740,7 +708,7 @@
        "Name: price_range, dtype: float64"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -752,7 +720,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -779,7 +747,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -833,7 +801,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -854,7 +822,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -863,7 +831,7 @@
        "SignificanceResult(statistic=0.013963063585717606, pvalue=0.5864696164493328)"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -878,7 +846,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -887,7 +855,7 @@
        "SignificanceResult(statistic=0.015337291510745345, pvalue=0.5501729934653677)"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -909,7 +877,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -935,7 +903,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1041,7 +1009,7 @@
        "[148 rows x 2 columns]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1054,7 +1022,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1103,7 +1071,7 @@
        "px_width    0.509599  1.000000"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1131,7 +1099,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1148,7 +1116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1157,7 +1125,7 @@
      "text": [
       "model: Linear Regression\n",
       "mse with RFE            : 0.09837859268348435\n",
-      "mse with SelectKBest    : 0.09807541433870647\n",
+      "mse with SelectKBest    : 0.0985019952740576\n",
       "mse no feature selection: 0.09843372810736171\n",
       "------------------------------------\n",
       "model: Lasso Regression\n",
@@ -1167,23 +1135,23 @@
       "------------------------------------\n",
       "model: Ridge Regression\n",
       "mse with RFE            : 0.09840123686807618\n",
-      "mse with SelectKBest    : 0.09836457385084073\n",
+      "mse with SelectKBest    : 0.09863710534086291\n",
       "mse no feature selection: 0.09845506113564062\n",
       "------------------------------------\n",
       "model: Decision Tree Regressor\n",
-      "mse with RFE            : 0.20551378446115287\n",
-      "mse with SelectKBest    : 0.19047619047619047\n",
-      "mse no feature selection: 0.21553884711779447\n",
+      "mse with RFE            : 0.17794486215538843\n",
+      "mse with SelectKBest    : 0.19548872180451127\n",
+      "mse no feature selection: 0.21052631578947367\n",
       "------------------------------------\n",
       "model: Random Forest Regressor\n",
-      "mse with RFE            : 0.07272606516290722\n",
-      "mse with SelectKBest    : 0.0729175438596491\n",
-      "mse no feature selection: 0.07627518796992477\n",
+      "mse with RFE            : 0.07719573934837089\n",
+      "mse with SelectKBest    : 0.0712551378446115\n",
+      "mse no feature selection: 0.07534511278195487\n",
       "------------------------------------\n",
       "model: Support Vector Regressor\n",
-      "mse with RFE            : 0.09896902443445331\n",
-      "mse with SelectKBest    : 0.09885840357828415\n",
-      "mse no feature selection: 0.09874378863668823\n",
+      "mse with RFE            : 0.0996213911996632\n",
+      "mse with SelectKBest    : 0.09897092987343346\n",
+      "mse no feature selection: 0.09901482531697631\n",
       "------------------------------------\n"
      ]
     }
@@ -1233,14 +1201,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mean Squared Error for MLPRegressor: 0.1506882774713962\n"
+      "Mean Squared Error for MLPRegressor: 0.15789082425161338\n"
      ]
     }
    ],
@@ -1255,7 +1223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1276,7 +1244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1288,7 +1256,6 @@
     }
    ],
    "source": [
-    "from catboost import CatBoostRegressor\n",
     "catboost_regressor = CatBoostRegressor(verbose=0)\n",
     "catboost_regressor.fit(X_train, y_train_notscaled)\n",
     "y_pred = catboost_regressor.predict(X_test)\n",
@@ -1298,7 +1265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1321,7 +1288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -1339,7 +1306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1363,7 +1330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1372,7 +1339,7 @@
        "['../model/adaboost_model.pkl']"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1384,7 +1351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1393,7 +1360,7 @@
        "['../model/normalizer.pkl']"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1401,13 +1368,6 @@
    "source": [
     "joblib.dump(scaler, \"../model/normalizer.pkl\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
